add code to create embeddings for RAG

--- a/src/embeddings.ipynb
+++ b/src/embeddings.ipynb
@@ -84,22 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "data += [\n",
-    "    {\"id\": \"vec24\", \"text\": \"Table: City; Columns: city_code, city_name, state, country, latitude, longitude;\"},\n",
-    "    {\"id\": \"vec25\", \"text\": \"Table: University; Columns: uni_code, uni_name, city_code, state, country;\"},\n",
-    "    {\"id\": \"vec26\", \"text\": \"Table: Course; Columns: course_code, course_name, credits, department, uni_code;\"},\n",
-    "    {\"id\": \"vec27\", \"text\": \"Table: Enrollment; Columns: enroll_id, StuID, course_code, semester, year, grade;\"},\n",
-    "    {\"id\": \"vec28\", \"text\": \"Table: Department; Columns: dept_code, dept_name, uni_code, chairperson;\"}\n",
+    "    {\"id\": \"vec24\", \"text\": \"Table: Agencies; Columns: agency_id, agency_details;\"},\n",
+    "    {\"id\": \"vec25\", \"text\": \"Table: Staff; Columns: staff_id, agency_id, staff_details;\"},\n",
+    "    {\"id\": \"vec26\", \"text\": \"Table: Clients; Columns: client_id, agency_id, sic_code, client_details;\"},\n",
+    "    {\"id\": \"vec27\", \"text\": \"Table: Invoices; Columns: invoice_id, client_id, invoice_status, invoice_details;\"},\n",
+    "    {\"id\": \"vec28\", \"text\": \"Table: Meetings; Columns: meeting_id, client_id, meeting_outcome, meeting_type, billable_yn, start_date_time, end_date_time, purpose_of_meeting, other_details;\"},\n",
+    "    {\"id\": \"vec29\", \"text\": \"Table: Payments; Columns: payment_id, invoice_id, payment_details;\"},\n",
+    "    {\"id\": \"vec30\", \"text\": \"Table: Staff_in_Meetings; Columns: meeting_id, staff_id;\"}\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "upserted_count: 28"
+       "upserted_count: 35"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "35"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
